// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
.c0 {
  padding-left: 16.666666666666668rem;
}

@media (max-width: 62.5em) {
  .c0 {
    padding-left: 0;
  }
}

<div
  className="c0"
/>
`;

exports[`Content renders correctly 1`] = `
.c0 {
  max-width: 100%;
  margin: 0;
  padding: 5rem 3.3333333333333335rem 0 3.3333333333333335rem;
  box-sizing: border-box;
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  transition: transform 150ms ease-out;
}

.c0 p,
.c0 li {
  max-width: 80ch;
}

@media (max-width: 62.5em) {
  .c0 {
    padding: 5.555555555555555rem 1.1111111111111112rem 1.6666666666666667rem 1.1111111111111112rem;
    transform: translateX(0);
  }
}

<div
  className="c0"
/>
`;

exports[`Header renders correctly 1`] = `
.c0 {
  font-size: 1.7777777777777777rem;
  font-weight: 600;
  font-family: "Avenir Next",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  margin: 1.5em 0 0.5em;
}

<h2
  className="c0"
/>
`;

exports[`SubHeader renders correctly 1`] = `
.c0 {
  margin: 1.5em 0 0.5em;
  font-size: 1.3333333333333333rem;
  font-weight: 600;
  font-family: "Avenir Next",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

<h3
  className="c0"
/>
`;

exports[`Title renders correctly 1`] = `
.c0 {
  text-align: left;
  width: 100%;
  color: rgb(66, 66, 66);
  font-size: 2.3333333333333335rem;
  font-weight: bold;
  font-family: "Avenir Next",-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
}

<h1
  className="c0"
/>
`;
